--- a/App/BluetoothLeGatt/local.properties
+++ b/App/BluetoothLeGatt/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Feb 02 17:54:29 CST 2016
-sdk.dir=C\:\\Users\\SOLID\\AppData\\Local\\Android\\sdk
+#Thu Feb 04 14:29:54 CST 2016
+sdk.dir=C\:\\Users\\capne_000\\AppData\\Local\\Android\\sdk
