Trying to fix branches - 2

--- a/FirstCompletePrototype/Software/AltimeterBLE/local.properties
+++ b/FirstCompletePrototype/Software/AltimeterBLE/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 15 11:36:51 CDT 2016
-sdk.dir=C\:\\Users\\kurocketengineers\\AppData\\Local\\Android\\Sdk
+#Thu Apr 21 12:09:04 CDT 2016
+sdk.dir=C\:\\Users\\Dylan\\AppData\\Local\\Android\\sdk
