--- a/FirstCompletePrototype/Software/AltimeterBLE/Application/src/main/AndroidManifest.xml
+++ b/FirstCompletePrototype/Software/AltimeterBLE/Application/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
     <application android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/rocket_logo"
         android:theme="@android:style/Theme.Holo.Light">
         <activity android:name=".DeviceScanActivity"
             android:label="@string/app_name">
@@ -44,6 +44,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".GraphActivity"></activity>
+        <activity android:name=".PreFlightActivity"></activity>
         <activity android:name=".DeviceControlActivity"/>
         <service android:name=".BluetoothLeService" android:enabled="true"/>
     </application>
